--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# configuration for https://travis-ci.org/bitcoinj/bitcoinj
+# configuration for https://travis-ci.org/extrememist/bitcoinj
 sudo: false
 language: java
 jdk: oraclejdk8
@@ -17,5 +17,5 @@ after_success:
 
 notifications:
   irc:
-    channels: "irc.freenode.net#bitcoinj"
+    channels: "irc.freenode.net#hypermist"
     skip_join: true
